tests/auto/qml/qjsengine/tst_qjsengine.cpp
@@ -34,6 +34,7 @@
 
 #include <QtTest/QtTest>
 
+#include <private/qqmldata_p.h>
 #include <qjsengine.h>
 #include <qjsvalueiterator.h>
 #include <qgraphicsitem.h>
@@ -78,6 +79,7 @@ private slots:
     void newQObject();
     void newQObject_ownership();
     void newQObject_deletedEngine();
+    void newQObjectPropertyCache();
     void exceptionInSlot();
     void globalObjectProperties();
     void globalObjectEquals();
@@ -721,6 +723,19 @@ void tst_QJSEngine::newQObject_deletedEngine()
         engine.globalObject().setProperty("obj", object);
     }
     QTRY_VERIFY(spy.count());
+}
+
+void tst_QJSEngine::newQObjectPropertyCache()
+{
+    QScopedPointer<QObject> obj(new QObject);
+    QQmlEngine::setObjectOwnership(obj.data(), QQmlEngine::CppOwnership);
+
+    {
+        QJSEngine engine;
+        engine.newQObject(obj.data());
+        QVERIFY(QQmlData::get(obj.data())->propertyCache);
+    }
+    QVERIFY(!QQmlData::get(obj.data())->propertyCache);
 }
 
 void tst_QJSEngine::exceptionInSlot()
